nyt-pod-scraper/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pod-monitor
  labels:
    app: pod-monitor
    managed-by: deploy-scripts
